--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ marquee i {
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="imagess/group6.JPG" class="img-fluid" alt="">
+            <img src="images/add/25.jpeg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
